--- a/BrowserGame(courseSimbirSoft)/Views/Admin/Index.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Admin/Index.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-<h2>Only admin can view this page.</h2>
+<h1>Admin page</h1>
+<h2>If you are seeing this page, my congratulations you admin</h2>
