--- a/BrowserGame(courseSimbirSoft)/Views/Characters/Information.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Characters/Information.cshtml
@@ -16,22 +16,22 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Race)
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Race)
+            @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ability)
+            @Html.DisplayNameFor(model => model.Win)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ability)
+            @Html.DisplayFor(model => model.Win)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Class)
+            @Html.DisplayNameFor(model => model.Lose)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Class)
+            @Html.DisplayFor(model => model.Lose)
         </dd>
     </dl>
 </div>
