--- a/BrowserGame(courseSimbirSoft)/Views/Roles/UserList.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Roles/UserList.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
-<h2>Список пользователей</h2>
+<h2>Users list</h2>
 <table class="table">
     @foreach (var user in Model)
     {
