--- a/BrowserGame(courseSimbirSoft)/Views/Characters/Index.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Characters/Index.cshtml
@@ -23,13 +23,13 @@
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]">@Html.DisplayNameFor(model => model.Name)</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Race)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Ability)
+                @Html.DisplayNameFor(model => model.Lose)
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["ClassSortParm"]">@Html.DisplayNameFor(model => model.Class)</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["ClassSortParm"]">@Html.DisplayNameFor(model => model.Win)</a>
             </th>
             <th></th>
         </tr>
@@ -42,18 +42,19 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Race)
+                    @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Ability)
+                    @Html.DisplayFor(modelItem => item.Win)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Class)
+                    @Html.DisplayFor(modelItem => item.Lose)
                 </td>
                 <td>
-                    <a asp-action="Transform" asp-route-id="@item.Id">Transform</a> 
-                    <a asp-action="Information" asp-route-id="@item.Id">Information</a> 
+                    <a asp-action="Transform" asp-route-id="@item.Id">Transform</a>
+                    <a asp-action="Information" asp-route-id="@item.Id">Information</a>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                   
                 </td>
             </tr>
         }
