--- a/BrowserGame(courseSimbirSoft)/Views/Characters/Create.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Characters/Create.cshtml
@@ -17,19 +17,19 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Race" class="control-label"></label>
-                <input asp-for="Race" class="form-control" />
-                <span asp-validation-for="Race" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Ability" class="control-label"></label>
-                <input asp-for="Ability" class="form-control" />
-                <span asp-validation-for="Ability" class="text-danger"></span>
+                <label asp-for="Win" class="control-label"></label>
+                <input asp-for="Win" class="form-control" />
+                <span asp-validation-for="Win" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Class" class="control-label"></label>
-                <input asp-for="Class" class="form-control" />
-                <span asp-validation-for="Class" class="text-danger"></span>
+                <label asp-for="Lose" class="control-label"></label>
+                <input asp-for="Lose" class="form-control" />
+                <span asp-validation-for="Lose" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="bth btn-primary" />
@@ -37,8 +37,11 @@
         </form>
     </div>
 </div>
-<div>
-    <a asp-action="Index">Backward</a>
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Create" class="btn btn-success" />
+        <a class="btn btn-sm btn-secondary" asp-action="Index">Backward</a>
+    </div>
 </div>
 
 @section Scripts {
