--- a/BrowserGame(courseSimbirSoft)/Views/Characters/Details.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Characters/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @model BrowserGame_courseSimbirSoft_.Models.Character
 @{
-    ViewData["Title"] = "Information";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Information</h1>
+<h1>Details</h1>
 <div>
     <h4>Character</h4>
     <hr />
@@ -16,26 +16,26 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Race)
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Race)
+            @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ability)
+            @Html.DisplayNameFor(model => model.Win)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ability)
+            @Html.DisplayFor(model => model.Win)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Class)
+            @Html.DisplayNameFor(model => model.Lose)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Class)
+            @Html.DisplayFor(model => model.Lose)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Transform" asp-route-id="@Model.Id">Transform</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
     <a asp-action="Index">Backward</a>
 </div>
