--- a/BrowserGame(courseSimbirSoft)/Views/Characters/Create.cshtml
+++ b/BrowserGame(courseSimbirSoft)/Views/Characters/Create.cshtml
@@ -37,11 +37,9 @@
         </form>
     </div>
 </div>
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value="Create" class="btn btn-success" />
-        <a class="btn btn-sm btn-secondary" asp-action="Index">Backward</a>
-    </div>
+
+<div>
+    <a asp-action="Index">Backward</a>
 </div>
 
 @section Scripts {
